spec/error_logical_keyword_removed.expected
Parse error: spec/error_logical_keyword_removed.kex:6:16: runtime error: Undefined variable: and
